microservices/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysvc
  labels:
    app: flaskapp
spec:
  type: ClusterIP
  selector:
    app: flaskapp
  ports:
    - port: <>
      targetPort: <>
      protocol: TCP
